# nexus--babel-alexandria

./: AGENTS.md  CLAUDE.md  DISCOVERY.md  GEMINI.md  pyproject.toml  value-repos.json
.github/workflows/: ci-minimal.yml
tests/: test_jobs_service.py
